--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dota 2</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
 </head>
 <body>
     <header>
@@ -42,18 +41,16 @@
 
     <section id="heroes">
         <center>
-            <h2>Герои Dota 2</h2> <div class="hero-buttons">
-            </div>
-            <div>
-                <div></div>
-            </div>
+            <h2>Герои Dota 2</h2> <div class="hero-buttons"></div>
             <div id="strength-heroes" class="hero-category">
                 <div class="heroes-header">
                     <img src="https://cdn.akamai.steamstatic.com/apps/dota2/images/dota_react/icons/hero_strength.png" alt="">
                     <h3 style="color: #ff0000;">Герои Силы</h3> <!-- Добавить перед всеми секциями -->
                 </div>
                 <input type="text" id="searchBar" placeholder="Search for a hero...">
-                <div class="heroes-list"></div>
+                <div class="heroes-list">
+                    
+                </div>
             </div>
             <div id="agility-heroes" class="hero-category">
                 <div class="heroes-header">
@@ -61,7 +58,14 @@
                     <h3 style="color: #00ff00">Герои Ловкости</h3>            
                 </div>
                 <input type="text" id="searchBar" placeholder="Search for a hero...">
-                <div class="heroes-list"></div>
+                <div class="heroes-list">
+                    <div id="myModal" class="modal">
+                        <div class="modal-content">
+                            <span class="close">&times;</span>
+                            <h1>asd</h1>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div id="intelligence-heroes" class="hero-category">
                 <div class="heroes-header">
@@ -69,7 +73,14 @@
                     <h3 style="color: #00ccff">Герои Интеллекта</h3>            
                 </div>
                 <input type="text" id="searchBar" placeholder="Search for a hero...">
-                <div class="heroes-list"></div>
+                <div class="heroes-list">
+                    <div id="myModal" class="modal">
+                        <div class="modal-content">
+                            <span class="close">&times;</span>
+                            <h1>asd</h1>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div id="universal-heroes" class="hero-category">
                 <div class="heroes-header">
@@ -77,11 +88,18 @@
                     <h3 style="color: #cc00ff">Универсальные герои</h3>            
                 </div>
                 <input type="text" id="searchBar" placeholder="Search for a hero...">
-                <div class="heroes-list"></div>
+                <div class="heroes-list">
+                    <div id="myModal" class="modal">
+                        <div class="modal-content">
+                            <span class="close">&times;</span>
+                            <h1>asd</h1>
+                        </div>
+                    </div>
+                </div>
             </div>
         </center>
     </section>
-
+    
     <section id="news">
         <h2>Последние Новости</h2>
         <h3>Обновление патча 7.37c</h3>
@@ -140,5 +158,7 @@
         <p>&copy; 2024 Dota 2 Fan Site. Все права защищены.</p>
     </div>
     </center>
+
+    <script src="script.js"></script>
 </body>
 </html>
